<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".views.CreateAlbumFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_album_name_title"
        android:textAlignment="textStart"
        android:textColor="@color/Azul"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/createAlbumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/create_album_name_hint"
        android:maxLength="50"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_album_image_title"
        android:textAlignment="textStart"
        android:textColor="@color/Azul"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/createAlbumImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/create_album_image_hint"
        android:maxLength="2048"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_album_release_date_title"
        android:textAlignment="textStart"
        android:textColor="@color/Azul"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/create_album_release_date_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_album_desc_title"
        android:textAlignment="textStart"
        android:textColor="@color/Azul"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/createAlbumDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/create_album_desc_hint"
        android:maxLength="300"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_album_genre"
        android:textAlignment="textStart"
        android:textColor="@color/Azul"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/musicGenreSpinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_album_record_label"
        android:textAlignment="textStart"
        android:textColor="@color/Azul"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/recordLabelSpinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp" />

</LinearLayout>