<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:padding="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/grand_hotel_regular"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="65sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/collector_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/roboto"
            android:text="@string/collector_home_button"
            android:textColor="@color/button_text"
            android:textSize="15sp" />

        <Button
            android:id="@+id/visitor_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/roboto"
            android:text="@string/visitor_home_button"
            android:textColor="@color/button_text"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>