<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_favorite_performers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fondo"
    tools:context=".views.CollectorDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:orientation="vertical"
        android:background="@color/Gris"
        android:layout_margin="10sp"
        android:paddingTop="5dp"
        app:strokeWidth="2dp"
        android:outlineSpotShadowColor="@color/Gris"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/Azul"
            android:textSize="13sp"
            android:text="@string/name_collector"
            />

        <TextView
            android:id="@+id/name_detail_collector"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="nombre_colleccionista"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/Azul"
            android:textSize="13sp"
            android:text="@string/tel_collector"
            />

        <TextView
            android:id="@+id/tel_detail_collector"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="tel_colleccionista"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/Azul"
            android:textSize="13sp"
            android:text="@string/email_collector"
            />

        <TextView
            android:id="@+id/email_detail_collector"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="email_colleccionista" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1000sp"
        android:paddingTop="170sp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/title_performers_collector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/title_preformers_collector"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:visibility="visible" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_performers_collector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/Fondo"
            tools:listitem="@layout/list_performers_collector" >
        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</FrameLayout>
